# pwnedpasswords

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  NOTICE  README.md  README.rst  bump_version.sh  pyproject.toml  requirements.txt  setup.py  test_pwnedpasswords.py
.github/workflows/: ci.yml
meta/: header.sketch
pwnedpasswords/: __init__.py  __main__.py  exceptions.py  metadata.py  pwnedpasswords.py
