[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pwnedpasswords"
version = "3.0.0"
description = "A Python wrapper for Troy Hunt's Pwned Passwords API."
readme = "README.md"
requires-python = ">=3.5"
license = {text = "Apache-2.0"}
keywords = ["passwords", "security"]
authors = [
    {name = "Dan Loewenherz", email = "dan@lionheartsw.com"}
]
maintainers = [
    {name = "Dan Loewenherz", email = "dan@lionheartsw.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["build", "twine"]
test = ["nose"]

[project.urls]
Homepage = "https://github.com/lionheart/pwnedpasswords"
Repository = "https://github.com/lionheart/pwnedpasswords"
Download = "https://github.com/lionheart/pwnedpasswords/tarball/3.0.0"

[project.scripts]
pwnedpasswords = "pwnedpasswords.__main__:main"

[tool.setuptools]
packages = ["pwnedpasswords"]

[tool.setuptools.package-data]
"*" = ["LICENSE", "README.rst"]
